--- a/libs/libft/Makefile
+++ b/libs/libft/Makefile
@@ -1,14 +1,21 @@
+#  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⣦⣴⣶⣾⣿⣶⣶⣶⣶⣦⣤⣄⠀⠀⠀⠀⠀⠀⠀                                              
+#  ⠀⠀⠀⠀⠀⠀⠀⢠⡶⠻⠛⠟⠋⠉⠀⠈⠤⠴⠶⠶⢾⣿⣿⣿⣷⣦⠄⠀⠀⠀                𓐓  Makefile 𓐔           
+#  ⠀⠀⠀⠀⠀⢀⠔⠋⠀⠀⠤⠒⠒⢲⠀⠀⠀⢀⣠⣤⣤⣬⣽⣿⣿⣿⣷⣄⠀⠀                                              
+#  ⠀⠀⠀⣀⣎⢤⣶⣾⠅⠀⠀⢀⡤⠏⠀⠀⠀⠠⣄⣈⡙⠻⢿⣿⣿⣿⣿⣿⣦⠀      Dev: oezzaou <oussama.ezzaou@gmail.com> 
+#  ⢀⠔⠉⠀⠊⠿⠿⣿⠂⠠⠢⣤⠤⣤⣼⣿⣶⣶⣤⣝⣻⣷⣦⣍⡻⣿⣿⣿⣿⡀                                              
+#  ⢾⣾⣆⣤⣤⣄⡀⠀⠀⠀⠀⠀⠀⠀⠉⢻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                              
+#  ⠀⠈⢋⢹⠋⠉⠙⢦⠀⠀⠀⠀⠀⠀⢀⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇       Created: 2022/09/20 15:57:20 by oezzaou
+#  ⠀⠀⠀⠑⠀⠀⠀⠈⡇⠀⠀⠀⠀⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠇       Updated: 2025/03/02 10:13:06 by oezzaou
+#  ⠀⠀⠀⠀⠀⠀⠀⠀⡇⠀⠀⢀⣾⣿⣿⠿⠟⠛⠋⠛⢿⣿⣿⠻⣿⣿⣿⣿⡿⠀                                              
+#  ⠀⠀⠀⠀⠀⠀⠀⢀⠇⠀⢠⣿⣟⣭⣤⣶⣦⣄⡀⠀⠀⠈⠻⠀⠘⣿⣿⣿⠇⠀                                              
+#  ⠀⠀⠀⠀⠀⠱⠤⠊⠀⢀⣿⡿⣿⣿⣿⣿⣿⣿⣿⠀⠀⠀⠀⠀⠀⠘⣿⠏⠀⠀                             𓆩♕𓆪      
+#  ⠀⠀⠀⠀⠀⡄⠀⠀⠀⠘⢧⡀⠀⠀⠸⣿⣿⣿⠟⠀⠀⠀⠀⠀⠀⠐⠋⠀⠀⠀                     𓄂 oussama ezzaou𓆃  
+#  ⠀⠀⠀⠀⠀⠘⠄⣀⡀⠸⠓⠀⠀⠀⠠⠟⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                                              
 
-#                                                                              #
-#                                                         :::      ::::::::    #
-#    Makefile                                           :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
-#    By: oezzaou <oezzaou@student.1337.ma>          +#+  +:+       +#+         #
-#                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2022/09/20 15:57:20 by oezzaou           #+#    #+#              #
-#    Updated: 2025/03/01 08:13:23 by oezzaou          ###   ########.fr        #
-#                                                                              #
-# **************************************************************************** #
+#====<[ CC compiler: ]>=========================================================
+CC			      = cc
+CFLAGS	      = -Wall -Wextra -Werror
+RM			      = rm -rf
 
 #====<[ Colors: ]>==============================================================
 GREEN					= \033[1;32m
@@ -34,21 +41,16 @@ LIGHT_WHITE  	= \033[97m
 LIGHT_BLUE		= \033[38;5;45m
 RESET					= \033[1;0m
 
-#====<[ CC compiler: ]>=========================================================
-CC			= cc
-CFLAGS	= -Wall -Wextra -Werror
-RM			= rm -rf
-
 #===<[ Sources: ]>==============================================================
-PROJECT			:= libft
-STATIC_LIB	:= libft.a
-SHARED_LIB	:= libft.so
-SRC_DIR			:= src
-OBJ_DIR			:= obj
-INCLUDE			:= -Iinclude 
+PROJECT			  := libft
+STATIC_LIB	  := libft.a
+SHARED_LIB	  := libft.so
+SRC_DIR			  := src
+OBJ_DIR			  := obj
+INCLUDE			  := -Iinclude 
 
-SRC					:= $(wildcard */*/*.c) 
-OBJ					:= $(addprefix $(OBJ_DIR)/, $(notdir ${SRC:.c=.o}))
+SRC					  := $(wildcard */*/*.c) 
+OBJ					  := $(addprefix $(OBJ_DIR)/, $(notdir ${SRC:.c=.o}))
 
 #====<[ Rules: ]>===============================================================
 all: static 
