--- a/libs/libft/Makefile
+++ b/libs/libft/Makefile
@@ -5,7 +5,7 @@
 #  ⢀⠔⠉⠀⠊⠿⠿⣿⠂⠠⠢⣤⠤⣤⣼⣿⣶⣶⣤⣝⣻⣷⣦⣍⡻⣿⣿⣿⣿⡀                                              
 #  ⢾⣾⣆⣤⣤⣄⡀⠀⠀⠀⠀⠀⠀⠀⠉⢻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇                                              
 #  ⠀⠈⢋⢹⠋⠉⠙⢦⠀⠀⠀⠀⠀⠀⢀⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇       Created: 2022/09/20 15:57:20 by oezzaou
-#  ⠀⠀⠀⠑⠀⠀⠀⠈⡇⠀⠀⠀⠀⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠇       Updated: 2025/03/02 10:13:06 by oezzaou
+#  ⠀⠀⠀⠑⠀⠀⠀⠈⡇⠀⠀⠀⠀⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠇       Updated: 2025/03/19 11:42:53 by oezzaou
 #  ⠀⠀⠀⠀⠀⠀⠀⠀⡇⠀⠀⢀⣾⣿⣿⠿⠟⠛⠋⠛⢿⣿⣿⠻⣿⣿⣿⣿⡿⠀                                              
 #  ⠀⠀⠀⠀⠀⠀⠀⢀⠇⠀⢠⣿⣟⣭⣤⣶⣦⣄⡀⠀⠀⠈⠻⠀⠘⣿⣿⣿⠇⠀                                              
 #  ⠀⠀⠀⠀⠀⠱⠤⠊⠀⢀⣿⡿⣿⣿⣿⣿⣿⣿⣿⠀⠀⠀⠀⠀⠀⠘⣿⠏⠀⠀                             𓆩♕𓆪      
@@ -55,9 +55,9 @@ OBJ					  := $(addprefix $(OBJ_DIR)/, $(notdir ${SRC:.c=.o}))
 #====<[ Rules: ]>===============================================================
 all: static 
 
-static: signature $(STATIC_LIB)
+static: $(STATIC_LIB)
 
-shared: signature $(SHARED_LIB)
+shared: $(SHARED_LIB)
 
 $(STATIC_LIB): $(OBJ) 
 	@ar -rcs $@ $^
@@ -66,10 +66,6 @@ $(STATIC_LIB): $(OBJ)
 $(SHARED_LIB): $(OBJ) 
 	@$(CC) $(CFLAGS) -shared -o $@ $^  
 	@echo "${GREEN}[OK] ${CYAN}$(SHARED_LIB) ✔️${RESET}"
-
-signature:
-	@printf "${GRAY}%19s${RESET}\n"	"𓆩♕𓆪"
-	@printf "${GRAY}%s${RESET}\n"		"𓄂 oussama ezzaou𓆃  "
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)/*/%.c | $(OBJ_DIR) 
 	@$(CC) $(CFLAGS) $(INCLUDE) -fPIC -c $< -o $@
@@ -110,5 +106,5 @@ re: fclean all
 
 .SUFFIXES: .o .c .a .so 
 
-.PHONY: all static shared clean fclean re signature
+.PHONY: all static shared clean fclean re
 #===============================================================================
